// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render correctly with alignSelf 1`] = `
<div
  className="sc-gsDKAQ fwjchY"
/>
`;

exports[`Column component should render correctly with each direction padding props 1`] = `
<div
  className="sc-gsDKAQ iAMxmr"
/>
`;

exports[`Column component should render correctly with each side padding props 1`] = `
<div
  className="sc-gsDKAQ hbHISi"
/>
`;

exports[`Column component should render correctly with global padding props 1`] = `
<div
  className="sc-gsDKAQ cnSMQv"
/>
`;

exports[`Column component should render correctly with max width 1`] = `
<div
  className="sc-gsDKAQ fUGOWQ"
/>
`;

exports[`Column component should render correctly with order props 1`] = `
<div
  className="sc-gsDKAQ jCeDda"
/>
`;

exports[`Column component should render correctly with some props 1`] = `
<div
  className="sc-gsDKAQ fVSDNs"
/>
`;

exports[`Column component should render correctly with textAlign 1`] = `
<div
  className="sc-gsDKAQ jKhHWP"
/>
`;

exports[`Column component should render correctly without props 1`] = `
<div
  className="sc-gsDKAQ fVSDNs"
/>
`;
